--- a/revision1.html
+++ b/revision1.html
@@ -23,6 +23,7 @@
             <h1>My Website About Draegan</h1>
         </div>
     </div>
+    <
     <div class="container">
         <div class="row">
             <div class="col-md-8">
@@ -39,11 +40,47 @@
       <div class="row">
         <div class="col-xs-4">
           <h3>
-            <a href="revision1.html">Revision 1</a>
+            <a href="index.html">Home Page</a>
           </h3>
         </div>
       </div>
    </div>
+   <div class="container">
+    <div class="col-md-4">
+      <div class="btn btn-warning">
+        <h3>WARNING</h3>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="btn btn-danger">
+        <h3>DANGER</h3>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="btn btn-primary">
+        <h3>PRIMARY</h3>
+      </div>
+    </div>
+   </div>
+   <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">First</th>
+        <th scope="col">Last</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>Mark</td>
+        <td>Otto</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>Jacob</td>
+        <td>Thornton</td>
+      </tr>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
