--- a/revision1.html
+++ b/revision1.html
@@ -65,22 +65,46 @@
    <table class="table">
     <thead>
       <tr>
-        <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
+        <th>Date</th>
+        <th>Event</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
+        <td>10/14/2005</td>
+        <td>Birth</td>
       </tr>
       <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
+        <td>08/01/2011</td>
+        <td>Start of Kindergarten (East Elementary)</td>
       </tr>
+      <tr>
+        <td>07/15/2016</td>
+        <td>Parents' Split</td>
+      </tr>
+      <tr>
+        <td>08/05/2019</td>
+        <td>Start of High School (MAHS)</td>
+      </tr>
+      <tr>
+        <td>11/30/2021</td>
+        <td>Move to Finger, TN</td>
+      </tr>
+   </table>
+    <div class="container">
+      <div class="row">
+        <div class="col=md-6">
+          <a href="https://en.wikipedia.org/wiki/Madison_Academic_Magnet_High_School#/media/File:MAHS_OLD.jpg">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/c/c0/MAHS_OLD.jpg" alt="Madison Academic Building at 179 Allen Avenue" class="img-thumbnail">
+          </a>
+          </div>
+        <div class="col=md-6">
+          <a href="https://www.jmcss.org/east">
+            <img src="https://www.jmcss.org/cms/lib/TN01917090/Centricity/Domain/13/East%20-cropped.png" alt="Madison Academic Building at 179 Allen Avenue" class="img-thumbnail">
+          </a>
+        </div>
+      </div>
+    </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
