--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
     <![endif]-->
   </head>
   <body>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="index.html">Home</a>
+        </div>
+          <ul class="nav navbar-nav">
+            <li><a href="revision1.html">Revision</a></li>
+          </ul>
+      </div>
+    </nav>
     <div class="container-fluid">
         <div class="jumbotron">
             <h1>My Website About Draegan</h1>
@@ -35,15 +45,6 @@
             </div>
         </div>
     </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-4">
-          <h3>
-            <a href="revision1.html">Revision 1</a>
-          </h3>
-        </div>
-      </div>
-   </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
