--- a/revision1.html
+++ b/revision1.html
@@ -18,12 +18,21 @@
     <![endif]-->
   </head>
   <body>
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="index.html">Home</a>
+          </div>
+            <ul class="nav navbar-nav">
+              <li><a href="revision1.html">Revision</a></li>
+            </ul>
+        </div>
+      </nav>
     <div class="container-fluid">
         <div class="jumbotron">
             <h1>My Website About Draegan</h1>
         </div>
     </div>
-    <
     <div class="container">
         <div class="row">
             <div class="col-md-8">
@@ -36,32 +45,12 @@
             </div>
         </div>
     </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-4">
-          <h3>
-            <a href="index.html">Home Page</a>
-          </h3>
-        </div>
-      </div>
-   </div>
    <div class="container">
-    <div class="col-md-4">
-      <div class="btn btn-warning">
-        <h3>WARNING</h3>
-      </div>
+    <div class="col-xl-12 btn-group btn-group-justified">
+      <a href="#" class="btn btn-warning">WARNING</a>
+      <a href="#" class="btn btn-danger">DANGER</a>
+      <a href="#" class="btn btn-primary">PRIMARY</a>
     </div>
-    <div class="col-md-4">
-      <div class="btn btn-danger">
-        <h3>DANGER</h3>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="btn btn-primary">
-        <h3>PRIMARY</h3>
-      </div>
-    </div>
-   </div>
    <table class="table">
     <thead>
       <tr>
@@ -91,6 +80,7 @@
         <td>Move to Finger, TN</td>
       </tr>
    </table>
+   </div>
     <div class="container">
       <div class="row">
         <div class="col=md-6">
