--- a/revision1.html
+++ b/revision1.html
@@ -24,7 +24,8 @@
             <a class="navbar-brand" href="index.html">Home</a>
           </div>
             <ul class="nav navbar-nav">
-              <li><a href="revision1.html">Revision</a></li>
+              <li><a href="revision1.html">Revision 1</a></li>
+              <li><a href="revision3.html">Revision 3</a></li>
             </ul>
         </div>
       </nav>
